# protodune_vd_flash

./: CMakeLists.txt  LY.cpp  avg.cpp  avg_spe.cpp  avg_spe_2.cpp  avg_spe_3.cpp  charge_spe.txt  filter_flash.cpp  fit_spe.cpp  flash.cpp  flux.cpp  list_file.txt  main.cpp  main_spe.cpp  map.txt  olhar.txt  plot_spe_fix.cpp  run.txt
configuration/fit/: 1050.json  1050_calc.json  1051.json  1051_calc.json  1060.json  1060_calc.json  1061.json  1061_calc.json  1070_calc.json  1071.json  1071_calc.json  1080.json  1080_calc.json  1081.json  1081_calc.json  2030.json  2030_calc.json  2031.json  2031_calc.json  2040.json  2040_calc.json  2041.json  2070.json  2071_calc.json  2080.json  2080_calc.json  2081.json  2081_calc.json  default.json
data/FIT_SPE/: 1050.txt  1051.txt  1060.txt  1061.txt  1070.txt  1071.txt  1080.txt  1081.txt  2030.txt  2031.txt  2040.txt  2041.txt  2070.txt  2071.txt  2080.txt  2081.txt
include/: LinkDef.h  my_data.hh  readConfigFit.hh  utils.hh
macro_python/: calc_charge.ipynb  deconvolution_teste.ipynb  fix_spe.ipynb  test_filter.ipynb
macros/: run_hvscan.sh
src/: my_data.cc  readConfigFit.cc  utills.cc
waveforms/39357/: waveform_1050.txt  waveform_1051.txt
waveforms/39358/: waveform_1060.txt
waveforms/39359/: waveform_1061.txt
waveforms/39360/: waveform_1070.txt  waveform_1071.txt  waveform_2030.txt  waveform_2031.txt  waveform_2040.txt  waveform_2041.txt
waveforms/39361/: waveform_1080.txt  waveform_1081.txt
waveforms/39365/: waveform_2070.txt  waveform_2071.txt
waveforms/39366/: waveform_2080.txt  waveform_2081.txt
waveforms/39510/: waveform_1050.txt  waveform_1051.txt  waveform_1060.txt  waveform_1061.txt  waveform_1070.txt  waveform_1071.txt  waveform_1080.txt  waveform_1081.txt  waveform_2030.txt  waveform_2031.txt  waveform_2040.txt  waveform_2041.txt  waveform_2070.txt  waveform_2071.txt  (+2 more)
(+240 files in other folders)
